--- a/docs2.html
+++ b/docs2.html
@@ -31,15 +31,16 @@
   /* расширенная навигация: кнопка «...» с выпадающим меню */
   nav.main-nav{display:flex;align-items:center;gap:8px}
   .more-dropdown{position:absolute;right:320px;top:50%;transform:translateY(-50%);z-index:70;display:inline-block}
-  .more-btn{background:transparent;color:#fff;border:none;font-size:26px;cursor:pointer;padding:8px 10px;border-radius:8px;font-weight:900;line-height:1}
-  /* hamburger inside the more button: three horizontal bars */
-  .more-btn .hamburger{display:inline-block;width:22px;height:2px;background:#fff;position:relative;border-radius:2px}
-  .more-btn .hamburger::before,.more-btn .hamburger::after{content:"";position:absolute;left:0;width:22px;height:2px;background:#fff;border-radius:2px}
-  .more-btn .hamburger::before{top:-7px}
-  .more-btn .hamburger::after{top:7px}
-    /* icon image replacement: use the image file `tochka.png` (place it in project root) */
-    .more-btn .more-icon{width:22px;height:22px;object-fit:contain;display:block}
-  /* вертикальные точки: используем символ U+22EE (⋮) */
+  .more-dropdown{position:absolute;right:360px;top:50%;transform:translateY(-50%);z-index:70;display:inline-block}
+  .more-btn{background:transparent;color:#fff;border:none;cursor:pointer;padding:8px 10px;border-radius:8px;font-weight:900;line-height:1;display:inline-flex;align-items:center;justify-content:center}
+  /* hamburger: three horizontal bars instead of vertical dots */
+  .more-btn .hamburger{width:20px;height:2px;background:#fff;border-radius:2px;display:block;position:relative}
+  .more-btn .hamburger::before,
+  .more-btn .hamburger::after{content:"";position:absolute;left:0;right:0;height:2px;background:#fff;border-radius:2px}
+  .more-btn .hamburger::before{top:-6px}
+  .more-btn .hamburger::after{top:6px}
+  /* icon image replacement: use the image file `tochka.png` (place it in project root) */
+  .more-btn .more-icon{width:22px;height:22px;object-fit:contain;display:block}
   .more-menu{position:absolute;right:0;top:calc(100% + 8px);background:#fff;color:var(--text);box-shadow:0 8px 24px rgba(3,20,45,0.12);border-radius:10px;overflow:hidden;min-width:220px;z-index:60;padding:6px 0}
   .more-menu a{display:block;padding:10px 14px;color:var(--text);font-weight:700;border-bottom:1px solid rgba(0,0,0,0.04);text-decoration:none}
   /* hover: немного серее */
@@ -100,7 +101,74 @@
       .federation-text h2{font-size:18px}
     }
 
-   
+    /* новости */
+    .news-grid {
+      display: grid;
+      grid-template-columns: repeat(2, 1fr);
+      gap: 24px;
+      margin-top: 32px;
+    }
+    .news-item {
+      background: #fff;
+      border-radius: 16px;
+      overflow: hidden;
+      box-shadow: 0 4px 14px rgba(11,99,183,0.12);
+      transition: transform 0.3s ease, box-shadow 0.3s ease;
+      display: flex;
+      flex-direction: column;
+    }
+    .news-item:hover {
+      transform: translateY(-6px);
+      box-shadow: 0 8px 22px rgba(11,99,183,0.2);
+    }
+    .news-item img {
+      width: 100%;
+      height: 220px;
+      object-fit: cover;
+    }
+    .news-content {
+      padding: 16px 20px;
+      display: flex;
+      flex-direction: column;
+      gap: 10px;
+      flex-grow: 1;
+    }
+    .news-date {
+      font-size: 14px;
+      color: #0b63b7;
+      font-weight: 700;
+    }
+    .news-title {
+      font-size: 18px;
+      font-weight: 800;
+      color: var(--text);
+    }
+    .news-desc {
+      color: #555;
+      font-size: 15px;
+      flex-grow: 1;
+    }
+    .news-link {
+      display: inline-block;
+      margin-top: 8px;
+      color: #fff;
+      background: #0b63b7;
+      padding: 8px 16px;
+      border-radius: 999px;
+      font-weight: 700;
+      text-align: center;
+      transition: background 0.3s ease;
+      align-self: flex-start;
+    }
+    .news-link:hover {
+      background: #2b78b9;
+    }
+
+    @media(max-width:768px){
+      .news-grid {
+        grid-template-columns: 1fr;
+      }
+    }
 
     footer{
       margin-top:28px;padding:0;border-top:1px solid rgba(11,99,183,0.06);
@@ -117,6 +185,17 @@
     @media(max-width:520px){
       .footer-inner{flex-direction:column;gap:12px;align-items:center}
     }
+    /* detail page layout: photo left, card right */
+    .detail-row{display:flex;gap:24px;align-items:flex-start;margin:20px 0}
+    .detail-photo{flex:0 0 380px}
+    .detail-photo img{width:100%;height:auto;border-radius:16px;box-shadow:0 4px 14px rgba(11,99,183,0.12);object-fit:cover;display:block}
+    .detail-card{flex:1;min-width:0}
+    .btn-primary{display:inline-block;background:var(--blue);color:#fff;padding:10px 16px;border-radius:10px;font-weight:700;text-decoration:none}
+    .btn-primary:hover{background:var(--blue-2)}
+    @media(max-width:768px){
+      .detail-row{flex-direction:column}
+      .detail-photo{flex:0 0 auto}
+    }
   </style>
 </head>
 
@@ -129,7 +208,8 @@
           <a href="index.html">Главная</a>
           <a href="about.html">О нас</a>
           <a href="index.html#news">Новости</a>
-          <a href="docs.html">Документы</a>
+          <a href="index.html#docs">Документы</a>
+            <a href="index.html#docs">Документы</a>
           <!-- одна видимая дополнительная кнопка -->
           <a href="leadership.html">Руководство</a>
           <!-- остальные кнопки в выпадающем меню '...' (вынесено перед соцсетями) -->
@@ -137,7 +217,9 @@
       </div>
 
           <div class="more-dropdown" id="moreDropdown">
-            <button class="more-btn" id="moreBtn" style="font-size:28px;padding:8px 10px;"><img src="/tochka.png" class="more-icon" alt="menu"></button>
+            <button class="more-btn" id="moreBtn" aria-label="Меню дополнительных ссылок" style="padding:8px 10px;">
+                <img src="/tochka.png" class="more-icon" alt="menu">
+            </button>
             <div class="more-menu" id="moreMenu" style="display:none">
               <a href="media.html">Медиа</a>
               <a href="competitions.html">Соревнования</a>
@@ -150,13 +232,23 @@
         <a class="social-btn" href="https://instagram.com/yourprofile" target="_blank" rel="noopener">
   <img src="/instagramlogo.png" alt="Instagram">
   </a>
-  <a class="social-btn" href="https://t.me/yourchannel" target="_blank"><img src="/telegramlogo.png" alt="Telegram"></a>
-  <a class="social-btn" href="https://facebook.com/yourpage" target="_blank"><img src="/facebooklogo.png" alt="Facebook"></a>
-  <a class="social-btn" href="https://tiktok.com/@yourprofile" target="_blank"><img src="/tiktoklogo.png" alt="TikTok"></a>
-  <a class="social-btn" href="https://youtube.com/yourchannel" target="_blank"><img src="/youtubelogo.png" alt="YouTube"></a>
+        <a class="social-btn" href="https://t.me/yourchannel" target="_blank"><img src="/telegramlogo.png" alt="Telegram"></a>
+        <a class="social-btn" href="https://facebook.com/yourpage" target="_blank"><img src="/facebooklogo.png" alt="Facebook"></a>
+        <a class="social-btn" href="https://tiktok.com/@yourprofile" target="_blank"><img src="/tiktoklogo.png" alt="TikTok"></a>
+        <a class="social-btn" href="https://youtube.com/yourchannel" target="_blank"><img src="/youtubelogo.png" alt="YouTube"></a>
       </div>
     </div>
-  </header>
+      <div id="langWrap" style="position:absolute;right:160px;top:50%;transform:translateY(-50%);z-index:80;">
+        <button id="langToggle" style="background:transparent;color:#fff;border:0;font-weight:700;cursor:pointer;padding:8px 10px;">
+          <span id="langCurrent">RU</span> ▾
+        </button>
+        <div id="langDropdown" style="display:none;position:absolute;right:0;top:calc(100% + 8px);background:#fff;color:#000;border-radius:8px;padding:6px;min-width:120px;box-shadow:0 8px 24px rgba(3,20,45,0.12);">
+          <a href="#" data-lang="ru" style="display:block;padding:8px 12px;text-decoration:none;color:inherit;">Рус</a>
+          <a href="#" data-lang="kk" style="display:block;padding:8px 12px;text-decoration:none;color:inherit;">Қаз</a>
+          <a href="#" data-lang="en" style="display:block;padding:8px 12px;text-decoration:none;color:inherit;">Eng</a>
+        </div>
+      </div>
+    </header>
 
   <section class="federation-hero">
     <div class="federation-container">
@@ -175,6 +267,58 @@
   <main class="container">
 
 
+<!-- Детальная секция: фото слева, карточка справа -->
+<div class="detail-row">
+  <div class="detail-photo">
+    <img src="/astana1.JPG" alt="Фото с турнира 1">
+  </div>
+  <div class="detail-card">
+    <!-- Карточка новости -->
+    <div class="news-card" style="
+      background:#fff;
+      border-radius:16px;
+      box-shadow:0 4px 14px rgba(11,99,183,0.12);
+      padding:24px;
+      margin-top:0;
+      transition:transform 0.3s ease, box-shadow 0.3s ease;
+    ">
+      <div class="news-card-inner" style="display:flex;flex-direction:column;gap:12px;">
+        <h3 style="font-size:22px;color:#000000;font-weight:800;margin:0;">
+        Международная аккредитация
+        </h3>
+        <p style="color:#3c3a3a;font-size:16px;line-height:1.6;">
+          Дата выдачи: 8 октября 2023 года
+Выдано: International Functional Fitness Federation (iF3)
+Настоящий документ подтверждает, что Федерация функционального многоборья Республики Казахстан аккредитована Международной Федерацией Функционального Фитнеса (iF3) и является единственным официальным представителем iF3 на территории Республики Казахстан.
+В соответствии с условиями аккредитации, Федерация функционального многоборья Республики Казахстан:
+представляет интересы Международной Федерации Функционального Фитнеса (iF3) на территории страны;
+обладает всеми правами, предоставленными международной структурой iF3;
+уполномочена формировать и направлять спортсменов Республики Казахстан для участия в чемпионатах мира и континентальных первенстви iF3;
+получает полную и всестороннюю поддержку со стороны iF3 для осуществления своей деятельности и развития функционального многоборья в Казахстане.
+Документ подписан и заверен Международной Федерацией Функционального Фитнеса (iF3) как подтверждение официального международного статуса Федерации функционального многоборья Республики Казахстан.
+        </p>
+        <div style="margin-top:8px;display:flex;gap:12px;align-items:center;">
+          <a class="btn-primary" href="index.html">Вернуться на главную</a>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+
+<script>
+  // эффект при наведении на карточку
+  document.querySelectorAll('.news-card').forEach(card => {
+    card.addEventListener('mouseenter', () => {
+      card.style.transform = 'translateY(-6px)';
+      card.style.boxShadow = '0 8px 22px rgba(11,99,183,0.2)';
+    });
+    card.addEventListener('mouseleave', () => {
+      card.style.transform = 'translateY(0)';
+      card.style.boxShadow = '0 4px 14px rgba(11,99,183,0.12)';
+    });
+  });
+</script>
 
 <script>
   // выпадающее меню "..."
@@ -193,22 +337,6 @@
   })();
 </script>
 
-    <section class="section">
-      <h1 style="font-size:24px;color:var(--blue);margin:0 0 12px 0;">Положение Чемпионата РК по функциональному многоборью</h1>
-  <div class="doc-card" style="background:#fff;padding:18px;border-radius:12px;box-shadow:0 8px 24px rgba(3,20,45,0.06);border:3px solid #000;">
-        
-        <p>Дата публикации: <strong>03.07.2025</strong></p>
-
-        <div style="margin-top:14px;">
-          <iframe src="/acre.pdf" id="poloIframe" width="100%" height="780" style="border:3px solid #000;border-radius:8px;" title="Положение Чемпионата"></iframe>
-        </div>
-        <div style="margin-top:12px;">
-          <!-- Убрана кнопка «Подробнее». Одна синяя кнопка ведёт на главную. -->
-          <a href="index.html" style="background:#0b63b7;color:#fff;padding:8px 18px;border-radius:999px;font-weight:700;text-transform:uppercase;font-size:14px;letter-spacing:0.3px;text-decoration:none;display:inline-block">Вернуться на главную</a>
-        </div>
-      </div>
-    </section>
-
   </main>
 
   <footer>
@@ -218,24 +346,25 @@
         <a href="index.html" style="color:#fff;font-weight:600;">Главная</a>
         <a href="about.html" style="color:#fff;font-weight:600;">О нас</a>
         <a href="news.html" style="color:#fff;font-weight:600;">Новости</a>
-        <a href="media.html" style="color:#fff;font-weight:600;">Медиа</a>
-  <a href="docs.html" style="color:#fff;font-weight:600;">Документы</a>
+    <a href="media.html" style="color:#fff;font-weight:600;">Медиа</a>
+  <a href="index.html#docs" style="color:#fff;font-weight:600;">Документы</a>
         <a href="competitions.html" style="color:#fff;font-weight:600;">Соревнования</a>
       </nav>
-      <div class="footer-socials">
-        <a class="social-btn" href="https://instagram.com/yourprofile" target="_blank" rel="noopener">
-    <img src="/instagramlogo.png" alt="Instagram">
+  <div class="footer-socials">
+    <a class="social-btn" href="https://instagram.com/yourprofile" target="_blank" rel="noopener">
+  <img src="/instagramlogo.png" alt="Instagram">
   </a>
-        <a class="social-btn" href="https://t.me/yourchannel" target="_blank"><img src="/telegramlogo.png" alt="Telegram"></a>
-        <a class="social-btn" href="https://facebook.com/yourpage" target="_blank"><img src="/facebooklogo.png" alt="Facebook"></a>
-        <a class="social-btn" href="https://tiktok.com/@yourprofile" target="_blank"><img src="/tiktoklogo.png" alt="TikTok"></a>
-        <a class="social-btn" href="https://youtube.com/yourchannel" target="_blank"><img src="/youtubelogo.png" alt="YouTube"></a>
-      </div>
+    <a class="social-btn" href="https://t.me/yourchannel" target="_blank"><img src="/telegramlogo.png" alt="Telegram"></a>
+    <a class="social-btn" href="https://facebook.com/yourpage" target="_blank"><img src="/facebooklogo.png" alt="Facebook"></a>
+    <a class="social-btn" href="https://tiktok.com/@yourprofile" target="_blank"><img src="/tiktoklogo.png" alt="TikTok"></a>
+    <a class="social-btn" href="https://youtube.com/yourchannel" target="_blank"><img src="/youtubelogo.png" alt="YouTube"></a>
+  </div>
     </div>
 
     <div class="footer-bottom">
       © 2025 Все права защищены — Казахстанская Федерация функционального многоборья
     </div>
   </footer>
+<script src="/lang.js"></script>
 </body>
 </html>
