deploy: include new images and finalize leadership/docs2 changes

--- a/docs2.html
+++ b/docs2.html
@@ -188,8 +188,8 @@
     /* detail page layout: photo left, card right */
     .detail-row{display:flex;gap:24px;align-items:flex-start;margin:20px 0}
   /* portrait photo: narrow column with fixed height for portrait crop */
-  .detail-photo{flex:0 0 260px}
-  .detail-photo img{width:100%;height:420px;border-radius:16px;box-shadow:0 4px 14px rgba(11,99,183,0.12);object-fit:cover;display:block}
+  .detail-photo{flex:0 0 400px}
+  .detail-photo img{width:100%;height:550px;border-radius:16px;box-shadow:0 4px 14px rgba(11,99,183,0.12);object-fit:cover;display:block}
     .detail-card{flex:1;min-width:0}
     .btn-primary{display:inline-block;background:var(--blue);color:#fff;padding:10px 16px;border-radius:10px;font-weight:700;text-decoration:none}
     .btn-primary:hover{background:var(--blue-2)}
@@ -210,7 +210,6 @@
           <a href="about.html">О нас</a>
           <a href="index.html#news">Новости</a>
           <a href="index.html#docs">Документы</a>
-            <a href="index.html#docs">Документы</a>
           <!-- одна видимая дополнительная кнопка -->
           <a href="leadership.html">Руководство</a>
           <!-- остальные кнопки в выпадающем меню '...' (вынесено перед соцсетями) -->
@@ -271,7 +270,7 @@
 <!-- Детальная секция: фото слева, карточка справа -->
 <div class="detail-row">
   <div class="detail-photo">
-    <img src="/astana1.JPG" alt="Фото с турнира 1">
+    <img src="/acredit.jpg" alt="Фото с турнира 1">
   </div>
   <div class="detail-card">
     <!-- Карточка новости -->
