--- a/leadership.html
+++ b/leadership.html
@@ -267,45 +267,43 @@
 
 <!-- Leadership: 4 portrait cards -->
 <div class="detail-row">
-  <div class="detail-photo"><img src="/astana1.JPG" alt="Руководство фото 1"></div>
+  <div class="detail-photo"><img src="/priz.jpg" alt="Руководство фото 1"></div>
   <div class="detail-card">
     <div class="news-card" style="background:#fff;border-radius:16px;box-shadow:0 4px 14px rgba(11,99,183,0.12);padding:20px;">
       <h3 style="margin:0 0 8px;font-size:20px;font-weight:800;">Мещеряков Николай Ильич</h3>
-      <p style="margin:0 0 12px;color:#3c3a3a;">Президент Федерации. Руководит организацией, представитель в международных структурах.</p>
-      <a class="btn-primary" href="leadership.html">Подробнее</a>
+      <p style="margin:0 0 12px;color:#3c3a3a;">Президент Казахстанской Федерации функционального многоборья.</p>
     </div>
   </div>
 </div>
 
 <div class="detail-row">
-  <div class="detail-photo"><img src="/astana2.JPG" alt="Руководство фото 2"></div>
-  <div class="detail-card">
-    <div class="news-card" style="background:#fff;border-radius:16px;box-shadow:0 4px 14px rgba(11,99,183,0.12);padding:20px;">
-      <h3 style="margin:0 0 8px;font-size:20px;font-weight:800;">Лукановский Валентин Владимирович</h3>
-      <p style="margin:0 0 12px;color:#3c3a3a;">Генеральный секретарь и Первый вице-президент Федерации.</p>
-      <a class="btn-primary" href="leadership.html">Подробнее</a>
-    </div>
-  </div>
-</div>
-
-<div class="detail-row">
-  <div class="detail-photo"><img src="/game1.jpg" alt="Руководство фото 3"></div>
+  <div class="detail-photo"><img src="/erlan.jpg" alt="Руководство фото 2"></div>
   <div class="detail-card">
     <div class="news-card" style="background:#fff;border-radius:16px;box-shadow:0 4px 14px rgba(11,99,183,0.12);padding:20px;">
       <h3 style="margin:0 0 8px;font-size:20px;font-weight:800;">Сулейменов Ерлан Мельсович</h3>
-      <p style="margin:0 0 12px;color:#3c3a3a;">Вице-президент Федерации, отвечает за региональную работу и развитие клубов.</p>
-      <a class="btn-primary" href="leadership.html">Подробнее</a>
+      <p style="margin:0 0 12px;color:#3c3a3a;">вице-президент Казахстанской Федерации функционального многоборья, генеральный спонсор, директор КДЛ "Олимп".</p>
     </div>
   </div>
 </div>
 
 <div class="detail-row">
-  <div class="detail-photo"><img src="/game2.JPG" alt="Руководство фото 4"></div>
+  <div class="detail-photo"><img src="/valen.jpg" alt="Руководство фото 3"></div>
   <div class="detail-card">
     <div class="news-card" style="background:#fff;border-radius:16px;box-shadow:0 4px 14px rgba(11,99,183,0.12);padding:20px;">
-      <h3 style="margin:0 0 8px;font-size:20px;font-weight:800;">Другой член руководства</h3>
-      <p style="margin:0 0 12px;color:#3c3a3a;">Краткая информация о роли и обязанностях.</p>
-      <a class="btn-primary" href="leadership.html">Подробнее</a>
+      <h3 style="margin:0 0 8px;font-size:20px;font-weight:800;">Лукановский Валентин Владимирович</h3>
+      <p style="margin:0 0 12px;color:#3c3a3a;">генеральный секретарь, вице-президент Казахстанской Федерации функционального многоборья.</p>
+
+    </div>
+  </div>
+</div>
+
+<div class="detail-row">
+  <div class="detail-photo"><img src="/roma.jpg" alt="Руководство фото 4"></div>
+  <div class="detail-card">
+    <div class="news-card" style="background:#fff;border-radius:16px;box-shadow:0 4px 14px rgba(11,99,183,0.12);padding:20px;">
+      <h3 style="margin:0 0 8px;font-size:20px;font-weight:800;">Джантлеев Роман Алмасович</h3>
+      <p style="margin:0 0 12px;color:#3c3a3a;">вице-президент Казахстанской Федерации функционального многоборья.</p>
+
     </div>
   </div>
 </div>
