--- a/news1.html
+++ b/news1.html
@@ -198,7 +198,6 @@
           <a href="about.html">О нас</a>
           <a href="index.html#news">Новости</a>
           <a href="index.html#docs">Документы</a>
-            <a href="index.html#docs">Документы</a>
           <!-- одна видимая дополнительная кнопка -->
           <a href="leadership.html">Руководство</a>
           <!-- остальные кнопки в выпадающем меню '...' (вынесено перед соцсетями) -->
@@ -258,8 +257,8 @@
 
 <!-- Блок с фото -->
 <div class="news-photos" style="display:flex;gap:16px;flex-wrap:wrap;margin:20px 0;">
-  <img src="/astana1.JPG" alt="Фото с турнира 1" style="flex:1;min-width:280px;border-radius:16px;box-shadow:0 4px 14px rgba(11,99,183,0.12);object-fit:cover;">
-  <img src="/astana2.JPG" alt="Фото с турнира 2" style="flex:1;min-width:280px;border-radius:16px;box-shadow:0 4px 14px rgba(11,99,183,0.12);object-fit:cover;">
+  <img src="/astana1.jpg" alt="Фото с турнира 1" style="flex:1;min-width:280px;border-radius:16px;box-shadow:0 4px 14px rgba(11,99,183,0.12);object-fit:cover;">
+  <img src="/astana2.jpg" alt="Фото с турнира 2" style="flex:1;min-width:280px;border-radius:16px;box-shadow:0 4px 14px rgba(11,99,183,0.12);object-fit:cover;">
 </div>
 
 <!-- Карточка новости -->
